--- a/projects/graded-asignments/kelioniu-puslapis/components/_navbar.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/components/_navbar.scss
@@ -8,7 +8,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.15);
-  ul {
+  .nav-links {
     display: flex;
     gap: 3rem;
 
@@ -20,5 +20,45 @@ nav {
   }
   img {
     height: 15px;
+  }
+  .burger {
+    display: none;
+  }
+  .burger-links {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  nav {
+    .burger {
+      display: block;
+    }
+    .nav-links {
+      display: none;
+    }
+    .burger:hover {
+      .burger-links {
+        display: block;
+        height: 8rem;
+        position: absolute;
+        top: 5rem;
+        right: 15%;
+        ul {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          align-items: end;
+          gap: 1rem;
+        }
+
+        a {
+          text-decoration: none;
+          color: #1b6bed;
+          font-weight: 600;
+          font-size: 1.5rem;
+        }
+      }
+    }
   }
 }
