--- a/projects/graded-asignments/kelioniu-puslapis/components/_footer.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/components/_footer.scss
@@ -25,7 +25,7 @@ footer {
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        font-size: 18px;
+        font-size: 1.125rem;
         font-weight: 700;
         svg {
           border: 2px solid white;
@@ -39,7 +39,7 @@ footer {
       display: flex;
       color: #dcf2ed;
       gap: 5rem;
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: 400;
       line-height: 1.5rem;
 
@@ -62,7 +62,7 @@ footer {
       }
       h3 {
         color: white;
-        font-size: 18px;
+        font-size: 1.125rem;
         font-weight: 700;
       }
     }
@@ -72,7 +72,7 @@ footer {
     color: #dcf2ed;
     text-align: center;
     border-top: 1px dotted #dcf2ed;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 400;
     line-height: 1.3rem;
   }
