--- a/projects/graded-asignments/kelioniu-puslapis/styles.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/styles.scss
@@ -43,6 +43,7 @@ header {
   position: relative;
   top: -184px;
   margin-left: calc(100vw - 640px);
+  z-index: -1;
 }
 
 .container {
@@ -60,8 +61,7 @@ header {
 }
 .grey-bg {
   background-color: #f9f9f9;
-  //temporary
-  padding-bottom: 100px;
+  padding-bottom: 7rem;
 }
 
 .stats-box {
@@ -77,40 +77,61 @@ header {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1;
   }
+
   .card-wrap {
-    height: 50%;
-    width: 70%;
+    max-height: 80%;
+    width: $container-width;
     background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 2;
     .stats-card {
       padding: 5rem;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr;
+      align-items: start;
       grid-template-areas:
         "text text a b"
         "text text c d";
       gap: 3rem;
+      @media screen and (max-width: 1350px) {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 3r;
+        grid-template-areas: "text text text text" " a b c d";
+        gap: 1rem;
+      }
+      @media screen and (max-width: 950px) {
+        padding: 1rem;
+        width: 90%;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 2fr 1fr 1fr;
+        grid-template-areas: "text text" " a b" "c d";
+        gap: 1rem;
+        overflow-y: scroll;
+      }
       .text-wrap {
-        padding-right: 5rem;
+        align-self: center;
         grid-area: text;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: flex-start;
         gap: 2.8rem;
+        padding-right: 3rem;
         h1 {
           color: #333;
           font-family: Plus Jakarta Sans;
-          font-size: 36px;
+          font-size: 2.25rem;
           font-weight: 700;
         }
         h2 {
           color: #888;
           font-family: Plus Jakarta Sans;
-          font-size: 16px;
+          font-size: 1rem;
           font-weight: 400;
           line-height: 150%; /* 24px */
         }
@@ -118,11 +139,11 @@ header {
       .a-stat {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: start;
         .number {
           color: #1f59ee;
           font-family: Plus Jakarta Sans;
-          font-size: 50px;
+          font-size: 3rem;
           font-weight: 700;
           line-height: 120%; /* 60px */
         }
@@ -131,17 +152,87 @@ header {
 
           /* H5 */
           font-family: Plus Jakarta Sans;
-          font-size: 18px;
+          font-size: 1.125rem;
           font-weight: 700;
         }
         .explain-legend {
           color: #888;
           font-family: Plus Jakarta Sans;
-          font-size: 16px;
+          font-size: 1rem;
           font-weight: 400;
           line-height: 150%; /* 24px */
         }
       }
+    }
+  }
+}
+.container-full-w {
+  position: relative;
+  .deco-rekomend-top {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+  }
+  .rekomendacijos {
+    width: $container-width;
+    margin: 0 auto;
+    padding-bottom: 7.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h2 {
+      margin-top: 5rem;
+      margin-bottom: 4.5rem;
+      align-self: flex-start;
+      color: #262020;
+      font-family: Plus Jakarta Sans;
+      font-size: 2.25rem;
+      font-weight: 700;
+    }
+    .thumbs {
+      width: 100%;
+      // display: grid;
+      // grid-template-columns: repeat(4, 1fr);
+      row-gap: 4rem;
+      column-gap: 2.4rem;
+
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+
+      .img-w-caption {
+        height: 282px;
+        width: 282px;
+        position: relative;
+        img {
+          height: 282px;
+          width: 282px;
+          object-fit: cover;
+        }
+        h3 {
+          position: absolute;
+          padding: 1rem;
+          color: white;
+          background: rgba(43, 43, 43, 0.7);
+          bottom: 0;
+          left: 0;
+          right: 0;
+          color: #fff;
+          font-family: Plus Jakarta Sans;
+          font-size: 1rem;
+          font-weight: 600;
+          line-height: 136.188%; /* 21.79px */
+          text-transform: capitalize;
+        }
+      }
+    }
+    .deco-rekomend-bottom {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
     }
   }
 }
