--- a/projects/graded-asignments/kelioniu-puslapis/apie/apie.css
+++ b/projects/graded-asignments/kelioniu-puslapis/apie/apie.css
@@ -6,12 +6,12 @@ html {
 body {
   font-size: 16px;
 }
-
 @media screen and (max-width: 950px) {
   body {
     font-size: 10px;
   }
 }
+
 nav {
   margin: 0 auto;
   width: 70%;
@@ -53,12 +53,16 @@ nav .burger-links {
     position: absolute;
     top: 5rem;
     right: 15%;
+    background-color: rgba(249, 249, 249, 0.8431372549);
+    padding: 3rem 2rem;
+    border-radius: 1rem;
+    z-index: 10;
   }
   nav .burger:hover .burger-links ul {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: end;
+    align-items: center;
     gap: 1rem;
   }
   nav .burger:hover .burger-links a {
@@ -144,7 +148,7 @@ footer .copyright {
   line-height: 1.3rem;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 931px) {
   footer .footer_top {
     justify-content: center;
   }
@@ -164,4 +168,73 @@ footer .copyright {
   footer .footer_top .footer_top_left .footer_top_left_down {
     align-items: center;
   }
+}
+body {
+  background-color: #f9f9f9;
+}
+
+.hat {
+  height: 18.5rem;
+  background-image: url("../pics/neris.png");
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+}
+.hat h1 {
+  color: #fff;
+  font-family: Plus Jakarta Sans;
+  font-size: 2.25rem;
+  font-weight: 700;
+  margin-left: 15%;
+}
+
+main {
+  background-color: #fff;
+  width: 70%;
+  margin: 0 auto;
+  padding: 5rem;
+  margin: 3.5rem auto;
+}
+main .wrap-cite {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  gap: 2rem;
+}
+@media screen and (max-width: 931px) {
+  main .wrap-cite {
+    flex-wrap: wrap;
+  }
+}
+main .wrap-cite cite {
+  color: #333;
+  font-family: Plus Jakarta Sans;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 2rem;
+  flex: 1 2 auto;
+}
+main .wrap-cite cite::before {
+  display: block;
+  content: url("../pics/ri_double-quotes-r.svg");
+}
+main .wrap-cite .div-img {
+  display: block;
+  background-image: url("../pics/traveller-w-map.jpeg");
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  min-height: 100%;
+  flex: 1 1 auto;
+}
+@media screen and (max-width: 931px) {
+  main .wrap-cite .div-img {
+    height: 20rem;
+  }
+}
+
+.grey-bg {
+  background-color: #f9f9f9;
+  padding-bottom: 7rem;
 }/*# sourceMappingURL=apie.css.map */
