--- a/projects/graded-asignments/kelioniu-puslapis/components/slider/_slider.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/components/slider/_slider.scss
@@ -32,7 +32,7 @@
     // width: calc(100% + 50px);
     .category {
       color: #a6a6a6;
-      font-family: Roboto;
+      font-family: "Roboto", sans-serif;
       font-size: 14px;
       font-weight: 500;
       text-transform: uppercase;
@@ -40,7 +40,7 @@
     .about-object {
       h3 {
         color: #4b4b4b;
-        font-family: Roboto;
+        font-family: "Roboto", sans-serif;
         font-size: 24px;
         font-weight: 500;
         line-height: 136.188%; /* 32.685px */
@@ -54,7 +54,7 @@
       }
       .place-name {
         color: #666;
-        font-family: Roboto;
+        font-family: "Roboto", sans-serif;
         font-size: 14px;
         font-weight: 500;
         line-height: 136.188%; /* 19.066px */
@@ -62,7 +62,7 @@
       .description {
         margin-top: 20px;
         color: #888;
-        font-family: Roboto;
+        font-family: "Roboto", sans-serif;
         font-size: 14px;
         font-weight: 400;
         line-height: 148.188%; /* 20.746px */
@@ -231,7 +231,7 @@
     @keyframes moving-left {
       0% {
         opacity: 0.4;
-        left: 200px;
+        right: 0;
         transform: rotate(-2deg);
 
         background-image: url("./pics/lt-veliava.jpeg");
@@ -240,7 +240,7 @@
       }
       8% {
         opacity: 0.6;
-        left: 150px;
+        left: 40%;
 
         padding-right: 5px;
       }
@@ -287,26 +287,67 @@
     //   -----------------------------------------
     @keyframes zero-to-right {
       0% {
-        left: 0;
         opacity: 1;
+        // left: 0;
         transform: rotate(2deg);
+
+        background-image: url("./pics/lt-veliava.jpeg");
+        background-size: cover;
+        padding-left: 5px;
       }
       8% {
-        left: 60px;
-        opacity: 0.8;
+        opacity: 0.7;
+        // right: 30%;
+        transform: translate(70%);
+
+        padding-left: 5px;
+      }
+      99% {
+        padding-left: 1px;
       }
       100% {
-        left: 200px;
         opacity: 0.5;
+        // right: 0;
+        transform: translate(100%);
+        padding-left: 0;
       }
     }
 
     .move-right {
       animation-name: zero-to-right;
+      animation-duration: 1s;
+      animation-fill-mode: forwards;
+      animation-timing-function: linear;
+    }
+    // ---------------------------------------
+    // ==============================================
+
+    // -----------------------------------------
+
+    @keyframes moving-right-from-right {
+      0% {
+        opacity: 0.5;
+      }
+      10% {
+        opacity: 0.5;
+      }
+      100% {
+        transform: translate(100%);
+        opacity: 0;
+      }
+    }
+    .make-right-move-from-right {
+      animation-name: moving-right-from-right;
       animation-duration: 0.5s;
       animation-fill-mode: forwards;
       animation-timing-function: linear;
     }
+    // ---------------------------------------
+    // ==============================================
+
+    // -----------------------------------------
+    //--------------------------------------
+    //------------------------------------------
     //   ----------------------------------------
     .map-outline {
       opacity: 0.4;
@@ -326,6 +367,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      margin-left: 0;
       margin-bottom: 2rem;
     }
     .btn-section {
@@ -353,6 +395,9 @@
 }
 @media screen and (max-width: 770px) {
   .slider-card {
+    .slider-card_text-box {
+      margin-left: 0;
+    }
     width: 98%;
     left: 0;
     .slider {
