--- a/projects/graded-asignments/kelioniu-puslapis/styles.css
+++ b/projects/graded-asignments/kelioniu-puslapis/styles.css
@@ -6,12 +6,12 @@ html {
 body {
   font-size: 16px;
 }
-
 @media screen and (max-width: 950px) {
   body {
     font-size: 10px;
   }
 }
+
 nav {
   margin: 0 auto;
   width: 70%;
@@ -53,12 +53,16 @@ nav .burger-links {
     position: absolute;
     top: 5rem;
     right: 15%;
+    background-color: rgba(249, 249, 249, 0.8431372549);
+    padding: 3rem 2rem;
+    border-radius: 1rem;
+    z-index: 10;
   }
   nav .burger:hover .burger-links ul {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: end;
+    align-items: center;
     gap: 1rem;
   }
   nav .burger:hover .burger-links a {
@@ -87,14 +91,14 @@ nav .burger-links {
 }
 .slider-card .slider-card_text-box .category {
   color: #a6a6a6;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-weight: 500;
   text-transform: uppercase;
 }
 .slider-card .slider-card_text-box .about-object h3 {
   color: #4b4b4b;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-size: 24px;
   font-weight: 500;
   line-height: 136.188%; /* 32.685px */
@@ -106,7 +110,7 @@ nav .burger-links {
 }
 .slider-card .slider-card_text-box .about-object .place-name {
   color: #666;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-weight: 500;
   line-height: 136.188%; /* 19.066px */
@@ -114,7 +118,7 @@ nav .burger-links {
 .slider-card .slider-card_text-box .about-object .description {
   margin-top: 20px;
   color: #888;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 148.188%; /* 20.746px */
@@ -246,7 +250,7 @@ nav .burger-links {
 @keyframes moving-left {
   0% {
     opacity: 0.4;
-    left: 200px;
+    right: 0;
     transform: rotate(-2deg);
     background-image: url("./pics/lt-veliava.jpeg");
     background-size: cover;
@@ -254,7 +258,7 @@ nav .burger-links {
   }
   8% {
     opacity: 0.6;
-    left: 150px;
+    left: 40%;
     padding-right: 5px;
   }
   99% {
@@ -292,21 +296,46 @@ nav .burger-links {
 }
 @keyframes zero-to-right {
   0% {
-    left: 0;
     opacity: 1;
     transform: rotate(2deg);
+    background-image: url("./pics/lt-veliava.jpeg");
+    background-size: cover;
+    padding-left: 5px;
   }
   8% {
-    left: 60px;
-    opacity: 0.8;
+    opacity: 0.7;
+    transform: translate(70%);
+    padding-left: 5px;
+  }
+  99% {
+    padding-left: 1px;
   }
   100% {
-    left: 200px;
     opacity: 0.5;
+    transform: translate(100%);
+    padding-left: 0;
   }
 }
 .slider-card .slider .move-right {
   animation-name: zero-to-right;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+}
+@keyframes moving-right-from-right {
+  0% {
+    opacity: 0.5;
+  }
+  10% {
+    opacity: 0.5;
+  }
+  100% {
+    transform: translate(100%);
+    opacity: 0;
+  }
+}
+.slider-card .slider .make-right-move-from-right {
+  animation-name: moving-right-from-right;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
   animation-timing-function: linear;
@@ -329,6 +358,7 @@ nav .burger-links {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-left: 0;
     margin-bottom: 2rem;
   }
   .slider-card .btn-section {
@@ -351,6 +381,9 @@ nav .burger-links {
   .slider-card {
     width: 98%;
     left: 0;
+  }
+  .slider-card .slider-card_text-box {
+    margin-left: 0;
   }
   .slider-card .slider .left-pic {
     width: 100%;
@@ -436,7 +469,7 @@ footer .copyright {
   line-height: 1.3rem;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 931px) {
   footer .footer_top {
     justify-content: center;
   }
@@ -527,6 +560,11 @@ header .statements-box button {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media screen and (max-width: 950px) {
+  .stats-box {
+    height: auto;
+  }
 }
 .stats-box .decor-2 {
   position: absolute;
