--- a/projects/graded-asignments/kelioniu-puslapis/styles.css
+++ b/projects/graded-asignments/kelioniu-puslapis/styles.css
@@ -529,7 +529,11 @@ header .statements-box button {
   position: relative;
   top: -184px;
   margin-left: calc(100vw - 640px);
-  z-index: -1;
+}
+@media screen and (max-width: 950px) {
+  .decor-top {
+    z-index: -1;
+  }
 }
 
 .container {
