--- a/projects/graded-asignments/kelioniu-puslapis/apie/apie.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/apie/apie.scss
@@ -27,6 +27,7 @@ main {
   margin: 0 auto;
   padding: 5rem;
   margin: 3.5rem auto;
+  box-shadow: 0px 0px 20px 0px rgba(122, 116, 116, 0.1);
   .wrap-cite {
     display: flex;
     align-items: stretch;
@@ -55,8 +56,14 @@ main {
       width: 100%;
       min-height: 100%;
       flex: 1 1 auto;
+      position: relative;
       @media screen and (max-width: 931px) {
         height: 20rem;
+      }
+      .deco-apie {
+        position: absolute;
+        top: 0;
+        left: 0;
       }
     }
   }
