--- a/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.scss
@@ -1,3 +1,145 @@
 @import "../components/page-settings";
 @import "../components/navbar";
 @import "../components/footer";
+
+body {
+  background-color: #f9f9f9;
+}
+
+.hat {
+  height: 18.5rem;
+  background-image: url("../pics/maze.jpeg");
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  h1 {
+    color: #fff;
+    font-family: Plus Jakarta Sans;
+    font-size: 2.25rem;
+    font-weight: 700;
+    margin-left: calc((100% - $container-width) / 2);
+  }
+}
+
+main {
+  background: #f9f9f9;
+  width: $container-width;
+  // margin: 0 auto;
+  // padding: 5rem;
+  margin: 3.5rem auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: center;
+  .contact-box {
+    background-color: white;
+    width: 60%;
+    display: flex;
+    justify-content: space-around;
+    align-items: start;
+    flex-wrap: wrap;
+    gap: 2.5rem;
+    box-shadow: 0px 0px 20px 0px rgba(122, 116, 116, 0.1);
+    padding: 3.6rem 1rem 0 1rem;
+    .kontaktai,
+    .rekvizitai {
+      display: flex;
+      flex-direction: column;
+      gap: 1.25rem;
+      h2 {
+        color: #262020;
+        font-family: Plus Jakarta Sans;
+        font-size: 1.875rem;
+        font-weight: 700;
+        line-height: 130%; /* 39px */
+      }
+      .category-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        .prop {
+          color: #262020;
+          font-family: Plus Jakarta Sans;
+          font-size: 1rem;
+          font-weight: 400;
+          line-height: 24px; /* 150% */
+          &::before {
+            content: "- ";
+          }
+        }
+        .value {
+          color: #1f59ee;
+          font-family: Plus Jakarta Sans;
+          font-size: 1rem;
+          font-weight: 400;
+          line-height: 20px; /* 125% */
+          display: flex;
+          align-items: center;
+          svg {
+            width: 24px;
+            height: 24px;
+          }
+        }
+      }
+    }
+    .map {
+      width: 100%;
+      height: 20rem;
+      background-image: url("../pics/contacts-map.png");
+      background-position: center;
+      background-size: cover;
+      box-shadow: 0px 0px 20px 0px rgba(122, 116, 116, 0.1);
+    }
+  }
+  .forma {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    box-shadow: 0px 0px 20px 0px rgba(122, 116, 116, 0.1);
+    padding: 3.6rem 3.125rem;
+
+    h2 {
+      color: #262020;
+      font-family: Plus Jakarta Sans;
+      font-size: 1.875rem;
+      font-weight: 700;
+      line-height: 130%; /* 39px */
+      margin-bottom: 0.5rem;
+    }
+    label {
+      color: #262020;
+      font-family: Plus Jakarta Sans;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1rem; /* 16px */
+      letter-spacing: -0.24px;
+    }
+    input {
+      border-radius: 6px;
+      border: 0.5px solid #999;
+      background: #fff;
+      height: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+    textarea {
+      border-radius: 6px;
+      border: 0.5px solid #999;
+      background: #fff;
+      height: 8.875rem;
+    }
+    button {
+      padding: 1rem 2rem;
+      border-radius: 1.5rem;
+      border: none;
+      background: linear-gradient(180deg, #00d4e4 -40.5%, #1f59ee 97.28%);
+      color: #fff;
+      font-family: Plus Jakarta Sans;
+      font-size: 0.875rem;
+      font-weight: 700;
+      text-transform: uppercase;
+      width: fit-content;
+    }
+  }
+}
