--- a/projects/graded-asignments/kelioniu-puslapis/components/_navbar.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/components/_navbar.scss
@@ -37,15 +37,16 @@ nav {
     .nav-links {
       display: none;
     }
-    .burger:hover {
+    .burger:hover,
+    .burger-links:hover {
       .burger-links {
         display: block;
         height: 8rem;
         position: absolute;
-        top: 5rem;
-        right: 15%;
+        top: 0;
+        right: 0;
         background-color: #f9f9f9d7;
-        padding: 3rem 2rem;
+        padding: 5rem 2rem;
         border-radius: 1rem;
         z-index: 10;
 
